--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -10,5 +10,9 @@
     <string name="Range">Range</string>
     <string name="Multi">Multi</string>
     <string name="Single">Single</string>
+    <string name="title_activity_sample_calendar_grid">SampleCalendarGridActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 </resources>
 
